--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,8 @@ google-api-python-client>=2.0.0
 # Gemini 3 Flash Preview (IA)
 google-genai
 
+fastapi
+uvicorn
+
 # Utilidades
 python-dotenv>=1.0.0
